--- a/src/mapserver/Cargo.toml
+++ b/src/mapserver/Cargo.toml
@@ -14,6 +14,8 @@ tower = "*"
 threadpool = "1"
 crossbeam-channel = "*"
 libc = "0.2"
+axum-swagger-ui = "0.3.0"
+tower-http = "0.5.0"
 
 [profile.release]
 lto = true
