--- a/src/mapserver/Cargo.toml
+++ b/src/mapserver/Cargo.toml
@@ -13,9 +13,12 @@ tokio = { version = "*", features = ["full"] }
 tower = "*"
 threadpool = "1"
 crossbeam-channel = "*"
-libc = "0.2"
+libc = "0.2.151"
 axum-swagger-ui = "0.3.0"
 tower-http = "0.5.0"
+http-body = "1.0.0"
+
+axum-jwks = "0.5.0"
 
 [profile.release]
 lto = true
