--- a/src/JWKS-Server/docker/envoy/envoy.yaml
+++ b/src/JWKS-Server/docker/envoy/envoy.yaml
@@ -50,7 +50,7 @@ static_resources:
                             requires_any:
                               requirements:
                               - provider_name: keycloak_user
-                                allow_missing_or_failed: true
+                              - allow_missing_or_failed: {}
                       bypass_cors_preflight: true
                   #- name: envoy.filters.http.rbac 
                   #  typed_config:
