--- a/src/JWKS-Server/docker/envoy/envoy.yaml
+++ b/src/JWKS-Server/docker/envoy/envoy.yaml
@@ -33,10 +33,10 @@ static_resources:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                       providers:
                         keycloak_user:
-                          issuer: http://192.168.1.11:8000/
+                          issuer: http://m1ddns.pvtool.com:8000/
                           remote_jwks:
                             http_uri:
-                              uri: http://192.168.1.11:8080/.well-known/jwks.json
+                              uri: http://m1ddns.pvtool.com:8080/.well-known/jwks.json
                               cluster: keycloak
                               timeout: 1s
                             cache_duration:
@@ -47,10 +47,11 @@ static_resources:
                         - match:
                             prefix: /
                           requires:
-                            requires_any:
-                              requirements:
-                              - provider_name: keycloak_user
-                              - allow_missing_or_failed: {}
+                            provider_name: keycloak_user
+                            #requires_any:
+                            #  requirements:
+                            #  - provider_name: keycloak_user
+                            #  - allow_missing_or_failed: {}
                       bypass_cors_preflight: true
                   #- name: envoy.filters.http.rbac 
                   #  typed_config:
@@ -87,22 +88,22 @@ static_resources:
       dns_lookup_family: V4_ONLY
       lb_policy: ROUND_ROBIN
       health_checks:
-        - timeout: 1s
-          interval: 5s
-          interval_jitter: 1s
-          unhealthy_threshold: 1
-          healthy_threshold: 1
-          http_health_check:
-            path: "/status"
+      - timeout: 1s
+        interval: 5s
+        interval_jitter: 1s
+        unhealthy_threshold: 1
+        healthy_threshold: 1
+        http_health_check:
+          path: "/status"
       load_assignment:
         cluster_name: keycloak
         endpoints:
-          - lb_endpoints:
-              - endpoint:
-                  address:
-                    socket_address:
-                      address: 192.168.1.11
-                      port_value: 8080
+        - lb_endpoints:
+          - endpoint:
+              address:
+                socket_address:
+                  address: m1ddns.pvtool.com
+                  port_value: 8080
 
     - name: local_service
       connect_timeout: 0.25s
@@ -111,19 +112,19 @@ static_resources:
       dns_lookup_family: V4_ONLY
       lb_policy: ROUND_ROBIN
       health_checks:
-        - timeout: 1s
-          interval: 10s
-          interval_jitter: 1s
-          unhealthy_threshold: 1
-          healthy_threshold: 1
-          http_health_check:
-            path: "/_/_/health/liveness"
+      - timeout: 1s
+        interval: 10s
+        interval_jitter: 1s
+        unhealthy_threshold: 1
+        healthy_threshold: 1
+        http_health_check:
+          path: "/_/_/health/liveness"
       load_assignment:
         cluster_name: local_service
         endpoints:
-          - lb_endpoints:
-              - endpoint:
-                  address:
-                    socket_address:
-                      address: 192.168.1.11
-                      port_value: 8080
+        - lb_endpoints:
+          - endpoint:
+              address:
+                socket_address:
+                  address: m1ddns.pvtool.com
+                  port_value: 8080
