--- a/src/mapserver/Cargo.toml
+++ b/src/mapserver/Cargo.toml
@@ -23,6 +23,8 @@ http-body = "1.0.0"
 http-body-util = "0.1.0"
 bytes = "1.5.0"
 
+nalgebra = "0.32.0"
+
 axum-jwks = "0.5.0"
 
 async-trait = "0.1.74"
