--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 name = "qr"
 path = "src/bin/qr.rs"
 
+[[bin]]
+name = "video_facedetect"
+path = "src/bin/video_facedetect.rs"
+
 [dependencies]
 opencv = "0.91.3"
