--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -31,6 +31,10 @@ encoding = "0.2"
 
 serde_regex = { version = "1.1", optional = true }
 
+#sophus = "0.8.0"
+
+kiss3d = "0.35"
+
 [dependencies.serde_crate]
 package = "serde"
 optional = true
