--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -33,7 +33,7 @@ serde_regex = { version = "1.1", optional = true }
 
 #sophus = "0.8.0"
 
-kiss3d = "0.35"
+nalgebra = "0.32.5"
 
 [dependencies.serde_crate]
 package = "serde"
