--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -35,6 +35,8 @@ serde_regex = { version = "1.1", optional = true }
 
 nalgebra = "0.32.5"
 
+rand = "0.8.5"
+
 [dependencies.serde_crate]
 package = "serde"
 optional = true
