--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -34,7 +34,7 @@ serde_regex = { version = "1.1", optional = true }
 #sophus = "0.8.0"
 
 nalgebra = "0.32.5"
-ceres_solver = "0.3.0"
+ceres-solver = { version = "0.3.0", features = ["source"] }
 
 rand = "0.8.5"
 pdqselect = "0.1.1"
