--- a/src/opencvdemo/CMakeLists.txt
+++ b/src/opencvdemo/CMakeLists.txt
@@ -100,3 +100,14 @@ target_link_libraries( example_15-02 ${OpenCV_LIBS} )
 
 add_executable( example_19-03 src/example_19-03.cpp )
 target_link_libraries( example_19-03 ${OpenCV_LIBS} )
+
+add_executable( simple-kalman-tracker src/simple-kalman-tracker.cpp )
+target_link_libraries( simple-kalman-tracker ${OpenCV_LIBS} )
+add_executable( BallTracker src/BallTracker.cpp )
+target_link_libraries( BallTracker ${OpenCV_LIBS} )
+#add_executable( GolfBallOpenCV src/GolfBallOpenCV.cpp )
+#target_link_libraries( GolfBallOpenCV ${OpenCV_LIBS} )
+add_executable( ballTrackingWithColor src/ballTrackingWithColor.cpp )
+target_link_libraries( ballTrackingWithColor ${OpenCV_LIBS} )
+add_executable( ballTrackingWithHoughCircles src/ballTrackingWithHoughCircles.cpp )
+target_link_libraries( ballTrackingWithHoughCircles ${OpenCV_LIBS} )
