--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["src/mapserver", "src/JWKS-Server", "src/opencvvideo"]
+members = ["src/mapserver", "src/JWKS-Server", "src/opencvvideo", "src/energy-monitor-tauri/src-tauri"]
 default-members = ["src/mapserver"]
 resolver = "2"
 
