--- a/src/energy-monitor-tauri/package.json
+++ b/src/energy-monitor-tauri/package.json
@@ -5,22 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "chart.js": "^4.2.1",
-    "vue": "^3.2.47",
-    "vue-chart-3": "^3.1.8"
+    "vue": "^3.3.4",
+    "chart.js": "4.2.1",
+    "vue-chart-3": "^3.1.8",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-shell": "^2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.2.3",
-    "@vue/compiler-sfc": "^3.2.47",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "vue-tsc": "^1.2.0"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1",
+    "vue-tsc": "^2.0.22",
+    "@tauri-apps/cli": "^2"
   }
 }
