--- a/src/energy-monitor-tauri/src-tauri/Cargo.toml
+++ b/src/energy-monitor-tauri/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.77.2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "app_lib"
+name = "tauri_app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -22,5 +22,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.0.6", features = [] }
-tauri-plugin-log = "2.0.0-rc"
-rand = "*"
+tauri-plugin-shell = "2"
+tauri-plugin-log = "2.0.1"
+rand = "0.8.5"
