--- a/src/opencvdemo/CMakeLists.txt
+++ b/src/opencvdemo/CMakeLists.txt
@@ -116,19 +116,58 @@ target_link_libraries( example_10-02 ${OpenCV_LIBS} )
 add_executable( example_10-03 src/example_10-03.cpp )
 target_link_libraries( example_10-03 ${OpenCV_LIBS} )
 
+add_executable( example_11-01 src/example_11-01.cpp )
+target_link_libraries( example_11-01 ${OpenCV_LIBS} )
+add_executable( example_11-02 src/example_11-02.cpp )
+target_link_libraries( example_11-02 ${OpenCV_LIBS} )
+add_executable( example_11-03 src/example_11-03.cpp )
+target_link_libraries( example_11-03 ${OpenCV_LIBS} )
+
 add_executable( example_12-01 src/example_12-01.cpp )
 target_link_libraries( example_12-01 ${OpenCV_LIBS} )
 add_executable( example_12-01_dft src/example_12-01_dft.cpp )
 target_link_libraries( example_12-01_dft ${OpenCV_LIBS} )
 target_link_libraries(example_12-01_dft Iconv::Iconv)
+add_executable( example_12-02 src/example_12-02.cpp )
+target_link_libraries( example_12-02 ${OpenCV_LIBS} )
+add_executable( example_12-03 src/example_12-03.cpp )
+target_link_libraries( example_12-03 ${OpenCV_LIBS} )
+add_executable( example_12-04 src/example_12-04.cpp )
+target_link_libraries( example_12-04 ${OpenCV_LIBS} )
 
 add_executable( example_13-01 src/example_13-01.cpp )
 target_link_libraries( example_13-01 ${OpenCV_LIBS} )
+add_executable( example_13-02 src/example_13-02.cpp )
+target_link_libraries( example_13-02 ${OpenCV_LIBS} )
+add_executable( example_13-03 src/example_13-03.cpp )
+target_link_libraries( example_13-03 ${OpenCV_LIBS} )
+
+add_executable( example_14-01 src/example_14-01.cpp )
+target_link_libraries( example_14-01 ${OpenCV_LIBS} )
+add_executable( example_14-02 src/example_14-02.cpp )
+target_link_libraries( example_14-02 ${OpenCV_LIBS} )
+add_executable( example_14-03 src/example_14-03.cpp )
+target_link_libraries( example_14-03 ${OpenCV_LIBS} )
+#add_executable( example_14-04 src/example_14-04.cpp )
+#target_link_libraries( example_14-04 ${OpenCV_LIBS} )
 
 add_executable( example_15-02 src/example_15-02.cpp )
 #add_dependencies(main std.compat)
 #target_link_libraries(main std.compat)
 target_link_libraries( example_15-02 ${OpenCV_LIBS} )
+add_executable( example_15-03 src/example_15-03.cpp )
+target_link_libraries( example_15-03 ${OpenCV_LIBS} )
+add_executable( example_15-04 src/example_15-04.cpp )
+target_link_libraries( example_15-04 ${OpenCV_LIBS} )
+add_executable( example_15-05 src/example_15-05.cpp )
+target_link_libraries( example_15-05 ${OpenCV_LIBS} )
+add_executable( example_15-BackgroundSubtractor src/example_15-BackgroundSubtractor.cpp )
+target_link_libraries( example_15-BackgroundSubtractor ${OpenCV_LIBS} )
+
+add_executable( example_16-01 src/example_16-01.cpp )
+target_link_libraries( example_16-01 ${OpenCV_LIBS} )
+add_executable( example_16-02 src/example_16-02.cpp )
+target_link_libraries( example_16-02 ${OpenCV_LIBS} )
 
 add_executable( example_17-01 src/example_17-01.cpp )
 target_link_libraries( example_17-01 ${OpenCV_LIBS} )
