--- a/src/opencvdemo/CMakeLists.txt
+++ b/src/opencvdemo/CMakeLists.txt
@@ -174,8 +174,28 @@ target_link_libraries( example_17-01 ${OpenCV_LIBS} )
 add_executable( example_17-02 src/example_17-02.cpp )
 target_link_libraries( example_17-02 ${OpenCV_LIBS} )
 
+#add_executable( example_18-01 src/example_18-01.cpp )
+#target_link_libraries( example_18-01 ${OpenCV_LIBS} )
+#add_executable( example_18-01_from_disk src/example_18-01_from_disk.cpp )
+#target_link_libraries( example_18-01_from_disk ${OpenCV_LIBS} )
+
+add_executable( example_19-01 src/example_19-01.cpp )
+target_link_libraries( example_19-01 ${OpenCV_LIBS} )
+add_executable( example_19-02 src/example_19-02.cpp )
+target_link_libraries( example_19-02 ${OpenCV_LIBS} )
 add_executable( example_19-03 src/example_19-03.cpp )
 target_link_libraries( example_19-03 ${OpenCV_LIBS} )
+add_executable( example_19-04 src/example_19-04.cpp )
+target_link_libraries( example_19-04 ${OpenCV_LIBS} )
+
+add_executable( example_20-01 src/example_20-01.cpp )
+target_link_libraries( example_20-01 ${OpenCV_LIBS} )
+add_executable( example_20-02 src/example_20-02.cpp )
+target_link_libraries( example_20-02 ${OpenCV_LIBS} )
+add_executable( example_21-01 src/example_21-01.cpp )
+target_link_libraries( example_21-01 ${OpenCV_LIBS} )
+add_executable( example_22-01 src/example_22-01.cpp )
+target_link_libraries( example_22-01 ${OpenCV_LIBS} )
 
 add_executable( simple-kalman-tracker src/simple-kalman-tracker.cpp )
 target_link_libraries( simple-kalman-tracker ${OpenCV_LIBS} )
