--- a/src/shadcnelevator/package.json
+++ b/src/shadcnelevator/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-three/fiber": "^9.1.2",
+    "@types/three": "^0.176.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -23,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
+    "three": "^0.176.0",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
