--- a/src/shadcnelevator/package.json
+++ b/src/shadcnelevator/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@types/three": "^0.176.0",
     "class-variance-authority": "^0.7.1",
