--- a/src/opencvvideo/Cargo.toml
+++ b/src/opencvvideo/Cargo.toml
@@ -22,22 +22,23 @@ serde = ["serde_crate", "ndarray/serde", "serde_regex"]
 [dependencies]
 lazy_static = "1.5.0"
 
-opencv = "0.92.0"
+opencv = "0.94.4"
+cxx = "1.0"
 
 linfa = { version = "0.7.0" }
-ndarray = { version = "0.15", features = ["approx"] }
-ndarray-linalg = { version = "0.16", optional = true }
-linfa-linalg = { version = "0.1", default-features = false }
-ndarray-stats = "0.5"
-ndarray-rand = { version = "0.14" }
-thiserror = "1.0"
+linfa-linalg = { version = "0.2", default-features = false }
+ndarray = { version = "0.16.1", features = ["approx"] }
+ndarray-linalg = { version = "0.17", optional = true }
+ndarray-stats = "0.6"
+ndarray-rand = { version = "0.15" }
+thiserror = "2.0.12"
 
-regex = "1.4.5"
+regex = "1.11.1"
 encoding = "0.2"
 
 serde_regex = { version = "1.1", optional = true }
 
-#sophus = "0.8.0"
+#sophus = "0.14.0"
 
 nalgebra = "0.32.5"
 ceres-solver = { version = "0.3.0", features = ["source"] }
@@ -52,7 +53,7 @@ serde_json = "1"
 log = "0.4"
 fast_log = "1.7"
 
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.45.0", features = ["full"] }
 rbs = { version = "4.5.20" }
 rbatis = { version = "4.5.30", features = ["debug_mode"] }
 #rbdc-sqlite = { version = "4.5.30" }
@@ -89,3 +90,6 @@ curl = "0.4.35"
 tar = "0.4.33"
 linfa = { version = "0.7.0", features = ["benchmarks"] }
 flate2 = "1.0.20"
+
+[build-dependencies]
+cxx-build = "1.0"
