--- a/src/lvgldemo/Cargo.toml
+++ b/src/lvgldemo/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 lazy_static = "1.5.0"
 
 lvgl = "0.6.2"
+lvgl-sys = "0.6.2"
 cxx = "1.0"
+cstr_core = "0.2.6"
 
 linfa = { version = "0.7.0" }
 linfa-linalg = { version = "0.2", default-features = false }
@@ -27,7 +29,7 @@ serde_regex = { version = "1.1", optional = true }
 #sophus = "0.14.0"
 
 nalgebra = "0.32.5"
-#ceres-solver = { version = "0.4.0", features = ["source"] }
+ceres-solver = { version = "0.4.0", features = ["source"] }
 
 rand = "0.8.5"
 pdqselect = "0.1.1"
