--- a/src/lvgldemo/Cargo.toml
+++ b/src/lvgldemo/Cargo.toml
@@ -8,10 +8,16 @@ edition = "2021"
 [dependencies]
 lazy_static = "1.5.0"
 
-lvgl = "0.6.2"
+lvgl = { version = "0.6.2", features = ["rust_timer"] }
 lvgl-sys = "0.6.2"
 cxx = "1.0"
-cstr_core = "0.2.6"
+cty = "0.2.2"
+embedded-graphics = { version = "0.8.0" }
+embedded-graphics-simulator = { version = "0.2" }
+cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"] }
+bitflags = "2.3.2"
+paste = "1.0.12"
+ctor = "0.2.2"
 
 linfa = { version = "0.7.0" }
 linfa-linalg = { version = "0.2", default-features = false }
