--- a/src/lvgldemo/Cargo.toml
+++ b/src/lvgldemo/Cargo.toml
@@ -3,17 +3,21 @@ name = "lvgldemo"
 version = "1.0.0"
 edition = "2021"
 
-links = "wayland-client"
+links = ""
 
 [dependencies]
 lazy_static = "1.5.0"
 
-lvgl = { version = "0.6.2", features = ["rust_timer"] }
-lvgl-sys = "0.6.2"
+#sdl2-sys = { version = "0.37.0", features = ["bundled"] }
+sdl2-sys = "0.37.0"
+sdl2 = "0.37.0"
+
+#lvgl = { version = "0.6.2", features = ["rust_timer"] }
+#lvgl-sys = "0.6.2"
 cxx = "1.0"
 cty = "0.2.2"
 embedded-graphics = { version = "0.8.0" }
-embedded-graphics-simulator = { version = "0.2" }
+#embedded-graphics-simulator = { version = "0.2" }
 cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"] }
 bitflags = "2.3.2"
 paste = "1.0.12"
