--- a/src/lvgldemo/Cargo.toml
+++ b/src/lvgldemo/Cargo.toml
@@ -9,7 +9,8 @@ links = ""
 lazy_static = "1.5.0"
 
 #sdl2-sys = { version = "0.35.2", features = ["bundled"] }
-sdl2-sys = { path = "../rust-sdl2/sdl2-sys", version = "0.35.2", features = ["bundled"] }
+#sdl2-sys = { path = "../rust-sdl2/sdl2-sys", version = "0.35.2", features = ["bundled", "static-link"] }
+sdl2-sys = { path = "../rust-sdl2/sdl2-sys", version = "0.35.2" }
 #sdl2 = "0.35.2"
 sdl2 = { path = "../rust-sdl2", version = "0.35.2" }
 
