--- a/src/lvgldemo/.cargo/config.toml
+++ b/src/lvgldemo/.cargo/config.toml
@@ -55,16 +55,18 @@ rustflags = [
 
 [target.armv7-unknown-linux-gnueabihf]
 #linker = "rust-lld"
+#linker = "/home/leafcolor/opt/x-tools/armv8-rpi3-linux-gnueabihf/bin/armv8-rpi3-linux-gnueabihf-gcc"
 linker = "/home/leafcolor/opt/cross-pi-gcc-14.2.0-2/bin/arm-linux-gnueabihf-gcc"
 #linker = "arm-linux-gnueabihf-gcc"
 rustc-link-search = { all = "/home/leafcolor/app/arm-linux-gnueabihf" }
 rustflags = [
     #"-C", "link-arg=-no-pie",
     #"-C", "target-cpu=cortex-a72",
-    "-C", "link-arg=--sysroot=/home/leafcolor/opt/cross-pi-gcc-14.2.0-2/arm-linux-gnueabihf/libc",
-    "-C", "target-feature=+crt-static",
+    #"-C", "link-arg=--sysroot=/home/leafcolor/opt/x-tools/armv8-rpi3-linux-gnueabihf/armv8-rpi3-linux-gnueabihf/sysroot",
+    #"-C", "link-arg=--sysroot=/home/leafcolor/opt/cross-pi-gcc-14.2.0-2/arm-linux-gnueabihf/libc",
+    #"-C", "target-feature=+crt-static",
     "-C", "link-arg=-Wl,-rpath-link,/home/leafcolor/app/arm-linux-gnueabihf",
-    "-C", "link-arg=-Wl,--copy-dt-needed-entries",
+    #"-C", "link-arg=-Wl,--copy-dt-needed-entries",
     "-C", "link-arg=-Wl,-Bdynamic",
     "-C", "link-arg=-lwayland-client",
     "-C", "link-arg=-lwayland-egl",
