--- a/src/energy-monitor-tauri/src-tauri/Cargo.toml
+++ b/src/energy-monitor-tauri/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ tauri = { version = "2.0.6", features = [] }
 tauri-plugin-shell = "2"
 tauri-plugin-log = "2.0.1"
 rand = "0.8.5"
+jlrs = { version = "0.21.1", features = ["local-rt", "julia-1-11"] }
