--- a/src/10_demo_display/prj.conf
+++ b/src/10_demo_display/prj.conf
@@ -6,7 +6,6 @@ CONFIG_DISPLAY=y
 
 # Configure LVGL
 CONFIG_LVGL=y
-CONFIG_LV_MEM_CUSTOM=y
 CONFIG_LV_Z_BITS_PER_PIXEL=16
 CONFIG_LV_COLOR_16_SWAP=y
 CONFIG_LV_Z_MEM_POOL_SIZE=8192
@@ -17,3 +16,4 @@ CONFIG_LV_USE_LABEL=y
 CONFIG_LV_LABEL_TEXT_SELECTION=y
 CONFIG_LV_LABEL_LONG_TXT_HINT=y
 CONFIG_LV_USE_LINE=y
+CONFIG_LV_USE_THEME_DEFAULT=y
