--- a/src/energy-monitor-tauri/package.json
+++ b/src/energy-monitor-tauri/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "chart.js": "4.2.1",
+    "vue-router": "^3.3.4",
+    "chart.js": "3.1.0",
     "vue-chart-3": "^3.1.8",
+    "three": "^0.176.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2"
   },
