--- a/src/Advanced-PassGen/package.json
+++ b/src/Advanced-PassGen/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.6.2"
   },
   "scripts": {
+    "dev": "vite",
     "start": "vite",
     "build": "vite build",
     "preview": "vite build && vite preview",
