--- a/src/lvglzephyr/CMakeLists.txt
+++ b/src/lvglzephyr/CMakeLists.txt
@@ -7,5 +7,8 @@ cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(lvgl)
 
-FILE(GLOB app_sources src/*.c)
+#FILE(GLOB app_sources src/main.c)
+#target_sources(app PRIVATE ${app_sources})
+
+FILE(GLOB app_sources src/mainplot.c src/lvgl_demo_ui.c)
 target_sources(app PRIVATE ${app_sources})
