--- a/src/energy-monitor-tauri/package.json
+++ b/src/energy-monitor-tauri/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@tweenjs/tween.js": "^18.6.4",
     "chart.js": "3.1.0",
     "three": "^0.176.0",
     "vue": "^3.3.4",
